--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "tsm": "^2.2.2"
   },
   "scripts": {
-    "build": "tsm rules.ts",
+    "build": "tsm rules.ts && cp karabiner.json ~/.config/karabiner/karabiner.json",
     "watch": "nodemon --exec yarn build -e ts"
   }
 }
